@@ -1,3 +1,7 @@
+2019-12-03  Franz Holzinger  <franz@ttproducts.de>
+
+    * Add an import method from one database table to another with an outer join to a category table.
+
 2019-11-28  Franz Holzinger  <franz@ttproducts.de>
 
     * Add example slots
